Redesigned and fixed demo page layout to support smaller window sizes. Clearly separated custom from standard commands on demo page and made it customizable. Made mock page more like a livery-player with a video behind the interactive layer and controls space divs on top of it.

--- a/demo/style.css
+++ b/demo/style.css
@@ -8,26 +8,31 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.controls-space {
+  flex-shrink: 0;
+  height: 50px;
+}
+
+header {
+  display: flex;
   justify-content: space-evenly;
-  align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #fff;
 }
 
 a.logo {
   display: inline-block;
-  position: absolute;
-  top: 5px;
-  left: 5px;
   padding: 4px;
   background: #222;
   box-shadow: 0 0 2px 2px #222;
-  opacity: 0.25;
+  opacity: 0.5;
 }
 
 a.logo:active,
@@ -39,19 +44,17 @@ a.logo:hover {
   width: 117px;
 }
 
-.panel {
-  border: 1px solid grey;
-  background-color: rgba(245, 245, 245, 0.913);
-  margin: 5px;
-  padding: 5px;
+main {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
 }
 
-.value {
-  background-color: rgba(225, 225, 225, 0.913);
-  padding: 1em;
-  margin-bottom: 1em;
+.panel {
+  margin: 5px;
+  border: 1px solid grey;
+  display: inline-block;
+  background-color: rgba(245, 245, 245, 0.9);
+  padding: 5px;
 }
